syntax = "proto3";

package hive_options;

option go_package = "./hive_options";

import "google/protobuf/descriptor.proto";

message MessageOptions {
  // As long as table_name is not blank,
  // a schema is generated for top-level messages in each file.
  string table_name = 1;
}

extend google.protobuf.MessageOptions {
  MessageOptions message_opts = 1021;
}

message FieldOptions {
  string type_override = 1;
}

extend google.protobuf.FieldOptions {
  FieldOptions field_opts = 1021;
}
